💄 Fix navbar layout spacing and wrap

--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -76,7 +76,8 @@
     gap: 1.2rem; /* 💖 adds space between items */
 
     .nav__item {
-      display: inline-block;
+      /*display: inline-block;*/
+      margin: 0 10px;
 
       .nav__link {
         display: inline-block;
